--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -5,6 +5,23 @@
   object-fit: cover; /* correctly displays image with any proportions per code designer*/
 }
 
+.profile__avatar-container {
+  position: relative;
+}
+
+.profile__avatar-btn {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.profile__avatar-btn::after {
+  content: "Edit Avatar";
+}
+
 .profile__avatar {
   height: 190px;
   width: 190px;
