--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -11,15 +11,17 @@
 
 .profile__avatar-btn {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 190px;
+  height: 190px;
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  visibility: hidden;
+  /*TODO: finish avatar button styling" */
 }
 
-.profile__avatar-btn::after {
-  content: "Edit Avatar";
+.profile__avatar-container:hover .profile__avatar-btn {
+  visibility: visible;
 }
 
 .profile__avatar {
@@ -116,6 +118,13 @@
     text-align: center;
     padding-top: 20px;
   }
+
+  .profile__avatar-btn {
+    visibility: visible;
+  }
+
+  /*TODO: set content of ::after element to " */
+  /*TODO: finish mobile avatar styling " */
 
   .profile__avatar {
     height: 80px;
