Modal.css updates

--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -89,11 +89,12 @@
 }
 
 .modal__title {
-  margin: 0 0 32px; /*bottom margin is 32px*/
-  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-family: Poppins;
   font-weight: 500;
-  font-size: 32px;
-  line-height: 32px;
+  font-size: 24px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
 }
 
 .modal__label {
@@ -139,7 +140,7 @@
   cursor: pointer;
 }
 
-button.modal__submit-btn.modal__delete-btn {
+.modal__delete-btn {
   background-color: #ff6565;
 }
 
@@ -173,7 +174,16 @@ button.modal__submit-btn.modal__delete-btn {
   gap: 8px;
   border-radius: 8px;
   border-width: 1px;
-  border: 2px solid #212121;
+  border: 2px solid #000000;
+  background-color: #ffffff;
+  color: #000000;
+}
+
+.modal__delete_form {
+  display: flex;
+  justify-content: center;
+  gap: 20px; /* space between the buttons */
+  margin-top: 24px;
 }
 
 @media screen and (max-width: 627px) {
@@ -198,7 +208,7 @@ button.modal__submit-btn.modal__delete-btn {
     width: 106px;
     height: 20px;
     gap: 0px;
-    opacity: 0px;
+    justify-content: space-between;
   }
 
   .modal__close-btn {
@@ -266,5 +276,58 @@ button.modal__submit-btn.modal__delete-btn {
     font-weight: 500;
     line-height: 19.2px;
     display: flex;
+  }
+
+  .modal__delete-btn {
+    width: 156px;
+    height: 52px;
+    padding-top: 18px;
+    padding-right: 32px;
+    padding-bottom: 18px;
+    padding-left: 32px;
+    gap: 8px;
+    border-radius: 8px;
+  }
+
+  .modal__cancel-btn {
+    width: 156px;
+    height: 52px;
+    padding-top: 18px;
+    padding-right: 32px;
+    padding-bottom: 18px;
+    padding-left: 32px;
+    gap: 8px;
+    border-radius: 8px;
+    border-width: 1px;
+    background-color: #fff;
+    color: #212121;
+  }
+
+  .modal__delete_title {
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    width: 276px;
+    height: 48px;
+    line-height: 120%;
+    font-weight: 500;
+    font-size: 20px;
+    letter-spacing: 0%;
+    text-align: center;
+  }
+
+  .modal__delete_container {
+    width: 300px;
+    height: 208px;
+    top: 214px;
+    left: 10px;
+    gap: 20px;
+    border-radius: 8px;
+    padding: 12px;
+  }
+
+  .modal__delete_form {
+    width: 156px;
+    height: 116px;
+    gap: 12px;
+    flex-direction: column;
   }
 }
