--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -11,8 +11,8 @@
 
 .profile__avatar-btn {
   position: absolute;
-  width: 190px;
-  height: 190px;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -155,5 +155,10 @@
   .profile__add-btn {
     margin: 0;
     width: 100%; /*Makes button bigger */
+  }
+
+  .profile__pencil-icon {
+    width: 80;
+    height: 80;
   }
 }
