--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -123,10 +123,6 @@
     padding-top: 20px;
   }
 
-  .profile__avatar-btn {
-    visibility: visible;
-  }
-
   /*TODO: set content of ::after element to " */
   /*TODO: finish mobile avatar styling " */
 
@@ -134,6 +130,12 @@
     height: 80px;
     width: 80px;
     margin: 0 0 12px;
+    object-fit: cover;
+    transition: transform 0.3s ease, opacity 0.3s ease; /* Smooth transition on hover */
+  }
+
+  .profile__avatar:hover {
+    opacity: 0.9; /* Slightly decrease opacity on hover */
   }
 
   .profile__name {
@@ -159,10 +161,5 @@
   .profile__add-btn {
     margin: 0;
     width: 100%; /*Makes button bigger */
-  }
-
-  .profile__pencil-icon {
-    width: 40;
-    height: 40;
   }
 }
