--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -17,6 +17,7 @@
   align-items: flex-end;
   justify-content: center;
   visibility: hidden;
+  cursor: pointer;
   /*TODO: finish avatar button styling" */
 }
 
@@ -131,10 +132,6 @@
     transition: transform 0.3s ease, opacity 0.3s ease;
   }
 
-  .profile__avatar:hover {
-    opacity: 0.9;
-  }
-
   .profile__name {
     font-size: 20px;
     margin: 0 0 6px;
@@ -158,5 +155,15 @@
   .profile__add-btn {
     margin: 0;
     width: 100%; /*Makes button bigger */
+  }
+  .profile__avatar-container {
+    position: relative;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 12px;
+  }
+
+  .profile__pencil-icon {
+    display: none;
   }
 }
