--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -160,10 +160,11 @@
 }
 
 .modal__submit-btn_disabled {
-  background-color: #212121;
+  background-color: #ccc;
+  color: #666;
+  opacity: 0.6;
 }
 
-/* ?? */
 .modal__close-icon {
   width: 22.63px;
   top: 28.49px;
