Updated some optional changes

--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -162,7 +162,7 @@
 .modal__submit-btn_disabled {
   background-color: #ccc;
   color: #666;
-  opacity: 0.6;
+  opacity: 50%;
 }
 
 .modal__close-icon {
