Updated .finally in handleDeleteSubmit

--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -151,6 +151,10 @@
   background-color: #ff6565;
 }
 
+.modal__delete-btn:hover {
+  background-color: #ff3333;
+}
+
 .modal__input_type_error {
   border: 1px solid rgba(255, 0, 0, 0.6);
 }
@@ -162,7 +166,7 @@
 .modal__submit-btn_disabled {
   background-color: #ccc;
   color: #666;
-  opacity: 50%;
+  opacity: 0.6;
 }
 
 .modal__close-icon {
